# tuisteroids

./: CLAUDE.md  Cargo.toml  README.md  package-lock.json
hooks/: install.sh  pre-commit
openspec/: project.md
openspec/changes/add-attract-mode/: proposal.md  tasks.md
openspec/changes/add-attract-mode/specs/collision/: spec.md
openspec/changes/add-attract-mode/specs/demo-ai/: spec.md
openspec/changes/add-attract-mode/specs/game-loop/: spec.md
openspec/changes/add-attract-mode/specs/renderer/: spec.md
openspec/changes/add-audio/: design.md  proposal.md  tasks.md
openspec/changes/add-audio/specs/audio/: spec.md
openspec/changes/add-audio/specs/game-loop/: spec.md
openspec/changes/add-initial-game/: design.md  proposal.md  tasks.md
openspec/changes/add-initial-game/specs/asteroids/: spec.md
openspec/changes/add-initial-game/specs/bullets/: spec.md
openspec/changes/add-initial-game/specs/collision/: spec.md
openspec/changes/add-initial-game/specs/game-loop/: spec.md
openspec/changes/add-initial-game/specs/input/: spec.md
openspec/changes/add-initial-game/specs/physics/: spec.md
openspec/changes/add-initial-game/specs/renderer/: spec.md
openspec/changes/add-initial-game/specs/ship/: spec.md
openspec/changes/update-bullet-range/: proposal.md  tasks.md
openspec/changes/update-bullet-range/specs/bullets/: spec.md
src/: asteroids.rs  audio.rs  bullets.rs  collision.rs  demo_ai.rs  game.rs  input.rs  lib.rs  main.rs  physics.rs  renderer.rs  ship.rs
